--- a/README.html
+++ b/README.html
@@ -156,7 +156,7 @@ aside > *:last-child {
         <h1 id="actuarial-gizmos">actuarial-gizmos</h1>
 <p>An easy-to-use yet flexible rating engine <em>builder</em>!</p>
 <h2 id="what-is-it">What is it?</h2>
-<p><strong>actuarial-gizmos</strong> is a Python package that automates much of the rating engine building process. It's one main objective is:</p>
+<p><strong>actuarial-gizmos</strong> is a Python package that automates much of the rating engine building process. Its one main objective is:</p>
 <ul>
 <li>Easy to use</li>
 </ul>
