--- a/README.html
+++ b/README.html
@@ -218,7 +218,7 @@ credit_score    pni_age
 [61 rows x 1 columns]
 
 &gt;&gt;&gt; rating_plan['credit_tier_placement'].evaluate({'credit_score': 795, 'pni_age': 25})
-{'credit_tier': 'I1'}
+{'credit_tier': 'A1'}
 </code></pre>
 </details>
 </li>
